K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-ui
  namespace: chatbot
spec:
  type: ClusterIP
  selector:
    app: chatbot-ui
  ports:
    - port: 80
      targetPort: 3000
